# covid_over_70s_deaths

./: README.MD  pyproject.toml
covid/: covid.ipynb
tests/: test_covid.py
