[tool.poetry]
name = "covid"
version = "0.1.0"
description = ""
authors = ["rgargente <rgargente@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
pandas = "^1.2.1"
seaborn = "^0.11.1"
jupyter = "^1.0.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
